--- a/webroot/mobile/css/style.css
+++ b/webroot/mobile/css/style.css
@@ -148,14 +148,14 @@ outline:none;height:0.8rem;line-height: 0.78rem;}
 /*新闻详情页--start*/
 .inner .collection{right:0.6rem;font-size:0.32rem;color:#fff;}
 .inner .share{font-size:0.34rem;color:#fff;}
-.newscon-box,.newscomment-box{background: #fff;overflow:hidden;/*padding-bottom:0.2rem;*/border-bottom:1px #e5e5e5 solid;}
+.newscon-box,.newscomment-box{background: #fff;overflow:hidden;padding-bottom:0.2rem;border-bottom:1px #e5e5e5 solid;}
 .newscon-box h3{line-height:0.46rem;width:100%;font-size:0.4rem;color:#222c38; margin:0.3rem 0 0.2rem;padding:0 0.3rem;}
 .newscon-box img{max-width:90%;height:auto;display: block;margin:0.3rem auto;}
 .newscon-box p img{max-width:100%;}
 .body-con img{min-height:.1rem;}
 .newscon-box p{width:90%;margin:0.4rem auto;line-height: 0.46rem;font-size:0.3rem;color:#222;text-align: justify; cursor: pointer;}
 .newscon-box p a,.body-con a{font-size:0.3rem;}
-.con-bottom{margin-right: .3rem;color:#9ba4ad;margin-top:0.2rem;font-size:0.28rem;}
+.con-bottom{color:#9ba4ad;font-size:0.28rem;background: #fff;padding:.2rem 0;}
 .con-bottom span{display: inline-block;font-size:0.24rem;overflow: hidden;height: .4rem;line-height: .4rem;}
 .con-bottom span:nth-of-type(2){width:12%;text-align: right;}
 .con-bottom .readnums{width:80%;text-align: right;}
