--- a/webroot/mobile/css/style.css
+++ b/webroot/mobile/css/style.css
@@ -304,7 +304,7 @@ border-bottom:none;top:-1px;margin-top:-1px;margin-left:-1px;}
 .newscomment-box .items a.link{display: inline-block;width:0.62rem;height:0.62rem;margin-right:0.16rem;border-radius: 50%;overflow:hidden;}
 .newscomment-box .nobottom a img{width:100%;height:auto;display: block;}
 .newscomment-box .nobottom span{display: inline-block;text-align: center; background: url(img/down.png) 62% center no-repeat;background-size:0.27rem 0.18rem;width:100%;height:0.26rem;margin-top:0.26rem;line-height:0.28rem;font-size:0.28rem;}
-.newscomment-box span.com-all{margin:0.2rem 0;display: inline-block;text-align: center;line-height: .3rem;width:100%;}
+.newscomment-box span.com-all{display: inline-block;text-align: center;line-height: .6rem;width:100%;border-top:1px #e5e5e5 solid;}
 .wraper .joinnumber{padding-bottom:0;    margin: 0.2rem 0;}
 .a-btn{height:1.8rem;width:100%;overflow:hidden;padding:0 0.33rem;font-size:0;margin-top:0.6rem; }
 .a-btn >a{display: inline-block;width:3.35rem;height:0.8rem;color:#fff;line-height: 0.8rem; text-align: center;font-size:0.28rem;border-radius: 0.2rem;-webkit-box-shadow: 0 0.2rem 0.2rem rgba(62,130,247,0.2);    box-shadow: 0 0.2rem 0.2rem rgba(62,130,247,0.2);}
