--- a/webroot/mobile/css/style.css
+++ b/webroot/mobile/css/style.css
@@ -392,7 +392,8 @@ background-size: 0.16rem 0.25rem;width:5%;height:100%;}
 .navmenu li a{color:#7a7e83;font-size:0.28rem;}
 .navmenu li a.active{color:#d62356}
 .morebtn{display: block;background: url(img/right.png) no-repeat;background-size:cover;width:0.15rem;height:0.22rem;align-self: center;}
-.internet-v-info{margin-bottom:0.2rem;border-bottom:1px #e5e5e5 solid;/*border-top:1px #e5e5e5 solid;*/padding:0.2rem 0;background: #fff;color:#969fa9;}
+/*新的关注 加上border-top*/
+.internet-v-info{margin-bottom:0.2rem;border-bottom:1px #e5e5e5 solid;border-top:1px #e5e5e5 solid;padding:0.2rem 0;background: #fff;color:#969fa9;}
 .internet-v-info .head-img{width:1.21rem;height:1.21rem;display: block;border-radius: 50%;position:relative;margin-right:0.3rem;float:left;}
 .head-img img{width:100%;height:100%;border-radius: 50%;}
 .head-img i{position: absolute;right:0.12rem;bottom:0;width:0.29rem;height:0.3rem;background: url(img/v.png) no-repeat;background-size: contain;}
