--- a/webroot/mobile/css/style.css
+++ b/webroot/mobile/css/style.css
@@ -1003,9 +1003,11 @@ background-size:3.82rem 1.9rem;margin-top:1rem;}
 .x-width{bottom: 2rem;right: 0.2rem;width: 1.06rem;height: 1.01rem;}
 .errorpage{width:100%;}
 .errorpage a{display:block;background: url(../images/404.png) no-repeat center center; width:6.91rem;height:4.59rem;background-size: contain;margin:0.3rem auto 0.5rem;}
+.n_err a{background: url(img/n_error.png) no-repeat center center;background-size: 3.09rem 2.75rem;}
 .ptips{color:#557791;font-size:.3rem;text-align: center;line-height:0.4rem;}
 .ptips em{text-indent:1.7rem;display: block;}
 .btnlist{margin-top:1.5rem;padding:0 0.4rem;overflow:hidden;}
+.n_err_btn{margin:1rem auto 0;border-top:1px #557791 solid;padding-top:1rem; width:92%;}
 .btnlist a{display: block;float:left;width:33.3%;text-align: center;color:#557791;font-size:.3rem;height:.6rem;line-height: .6rem;}
 .btnlist i{display:inline-block;background: url(img/re.png) no-repeat;width:0.37rem;height:0.36rem;background-size: contain;margin-right:0.08rem;vertical-align: middle;}
 .btnlist a:nth-of-type(2) i{background: url(img/ho.png) no-repeat;width:0.38rem;height:0.37rem;background-size: contain;}
