--- a/webroot/mobile/css/style.css
+++ b/webroot/mobile/css/style.css
@@ -150,10 +150,10 @@ outline:none;height:0.8rem;line-height: 0.78rem;}
 .inner .share{font-size:0.34rem;color:#fff;}
 .newscon-box,.newscomment-box{background: #fff;overflow:hidden;border-bottom:1px #e5e5e5 solid;}
 .newscon-box h3{line-height:0.46rem;width:100%;font-size:0.4rem;color:#222c38; margin:0.3rem 0 0.2rem;padding:0 0.3rem;}
-.newscon-box img{max-width:90%;height:auto;display: block;margin:0.3rem auto;}
-.newscon-box p img{max-width:100%;}
+.newscon-box img{max-width:100%;height:auto;display: block;margin:0 auto;}
+.body-con{margin:.3rem 0;}
 .body-con img{min-height:.1rem;}
-.newscon-box p{width:90%;margin:0.4rem auto;line-height: 0.46rem;font-size:0.3rem;color:#222;text-align: justify; cursor: pointer;}
+.newscon-box p{line-height: 0.46rem;color:#222;text-align: justify; cursor: pointer;}
 .newscon-box p a,.body-con a{font-size:0.3rem;}
 .con-bottom{color:#9ba4ad;font-size:0.28rem;background: #fff;padding:.2rem 0;}
 .con-bottom span{display: inline-block;font-size:0.24rem;overflow: hidden;height: .4rem;line-height: .4rem;}
@@ -169,7 +169,7 @@ outline:none;height:0.8rem;line-height: 0.78rem;}
 .newscomment-box{border-top:1px #e5e5e5 solid;}
 .com_img_pic{border-top:none;background: transparent;}
 .com_img_pic .items,.comm_bottom_des .items{background: transparent;}
-.com_img_pic .items img{width:.42rem;height:.42rem;}
+.com_img_pic .items img{width:.42rem;height:.42rem;border-radius: 50%;}
 .com_img_pic .comm-info{height:.42rem;}
 .total_number{line-height: .42rem;}
 .comm_bottom_des{background: transparent;}
