--- a/webroot/mobile/css/common.css
+++ b/webroot/mobile/css/common.css
@@ -67,7 +67,7 @@ textarea::-webkit-scrollbar{display: none;}/*隐藏多文本框滚动条*/
 .bd2:before{width:200%;height:1px;position:absolute;top:0;left:0;z-index:0;content:"";-webkit-transform:scale(0.5);-webkit-transform-origin:0 0;transform:scale(0.5);transform-origin:0 0;background: #e5e5e5;}
 .ld1:after{height:200%;width:1px;top:0;left:0;content:"";-webkit-transform:scale(0.5);-webkit-transform-origin:0 0;transform:scale(0.5);transform-origin:0 0;background: #e5e5e5;position:absolute;}
 .rd1:before{height:200%;width:1px;top:0;right:0;content:"";-webkit-transform:scale(0.5);-webkit-transform-origin:0 0;transform:scale(0.5);transform-origin:0 0;background: #e5e5e5;position:absolute;}
-/*----*/
+/*--主题背景色--*/
 .bggray{background: #7a7d82;}
 .bgred{background: #e01a48;}
 .bg-ff{background: #fff;}
@@ -77,7 +77,7 @@ textarea::-webkit-scrollbar{display: none;}/*隐藏多文本框滚动条*/
 .wraper .border{border-top:1px #e5e5e5 solid;border-bottom:1px #e5e5e5 solid;}
 
 .wraper .f-color-gray{color:#bbc0c6;font-size:0.28rem;line-height: 0.32rem;}
-.wraper .f-color-black{color:#222c38;}
+.wraper .f-color-black{color:#222c38;}/*字体颜色*/
 .wraper .col-g{color:#22a69f;}
 .wraper .col-o{color:#f06c27;}
 .wraper .col-lg{color:#6baf44;}
@@ -92,6 +92,7 @@ textarea::-webkit-scrollbar{display: none;}/*隐藏多文本框滚动条*/
 .wraper a.colorbg{background: #7a7e83;}
 .wraper .f7{color:#7a7e83;margin-right:0.1rem;font-size:.3rem;}
 .wraper .ml20{margin-left:0.2rem;}
+.wraper .mr10{margin-right:0.1rem;}
 .wraper .bbottom{border-bottom:1px #e5e5e5 solid;}
 .wraper .btop{border-top:1px solid #e5e5e5;}
 .wraper .h-info-box .lh4{line-height:0.4rem;}
@@ -104,6 +105,7 @@ textarea::-webkit-scrollbar{display: none;}/*隐藏多文本框滚动条*/
 .no-margin-b{padding-bottom:0;}
 /*最大宽度*/
 .wraper .w88{max-width: 88%;}
+.wraper .w7{max-width:70%;}
 /*common css end*/
 /*placeholder reset--*/
 input::-webkit-input-placeholder { /* WebKit browsers */ color: #7a7d82; } 
