--- a/webroot/mobile/css/style.css
+++ b/webroot/mobile/css/style.css
@@ -413,7 +413,7 @@ line-height: .34rem;height:.34rem;}
 .vipinfo span.c-info{line-height: 0.3rem;display: block;}
 .vipinfo .mark a{line-height: .26rem;font-size:.22rem;color:#9ba4ad;/*padding:0 0.1rem;margin-bottom:4px*/}
 .vipinfo .s_mark_h a {border: 1px #969fa9 solid;border-radius: 0.1rem;line-height: 20px;font-size: 12px;color: #969fa9;padding: 0 0.1rem;display: inline-block;margin-bottom: 4px;}
-.vipinfo .mark i{font-size:.26rem;margin-right: .05rem;}
+.vipinfo .mark i{font-size:.26rem;margin-right: .05rem;line-height: .3rem;}
 .vipinfo .bgblue a{background: #4285f4;border:1px #4285f4 solid;color:#fff;border:none;display:inline-block;margin-bottom:5px;}
 .m_focus_r{position: absolute;right:0;bottom:.2rem;;width:20%;text-align: center;font-size:.22rem;
 -webkit-transition: color .2s ease-in;transition: color .2s ease-in;}
