--- a/webroot/mobile/css/style.css
+++ b/webroot/mobile/css/style.css
@@ -391,15 +391,15 @@ background-size: 0.16rem 0.25rem;width:5%;height:100%;}
 .navmenu li a.active{color:#d62356}
 .morebtn{display: block;background: url(img/right.png) no-repeat;background-size:cover;width:0.15rem;height:0.22rem;align-self: center;}
 /*新的关注 加上border-top*/
-.internet-v-info{/*margin-bottom:0.2rem;border-bottom:1px #e5e5e5 solid;border-top:1px #e5e5e5 solid;padding:0.2rem 0;*/background: #fff;color:#969fa9;padding-top:.2rem;}
+.internet-v-info{/*margin-bottom:0.2rem;border-bottom:1px #e5e5e5 solid;border-top:1px #e5e5e5 solid;padding:0.2rem 0;*/background: #fff;color:#969fa9;padding-top:.3rem;}
 .internet-v-info .head-img{width:1.21rem;height:1.21rem;display: block;border-radius: 50%;position:relative;margin-right:0.3rem;float:left;}
 .head-img img{width:100%;height:100%;border-radius: 50%;}
 .head-img i{position: absolute;right:0.12rem;bottom:0;width:0.29rem;height:0.3rem;background: url(img/v.png) no-repeat;background-size: contain;}
 .mark,.s_mark_h{margin-top:0.1rem;max-height:50px;overflow:hidden;}
-.s_mark_h{max-height:50px;}
+.s_mark_h{min-height:50px;}
 
 /*.s_mark_h a{border:1px #969fa9 solid;}*/
-.vipinfo{width:5.3rem;float:left;padding-bottom:.2rem;}
+.vipinfo{width:5.3rem;float:left;padding-bottom:.3rem;}
 .internet-v-info:last-of-type .bbottom{border-bottom:none;}
 .vipinfo h3{font-size:0.32rem;color:#222c38;height:.5rem;overflow:hidden;line-height: .4rem;height:.44rem;}
 .vipinfo h3 .l-name{float:left;}
@@ -731,7 +731,7 @@ border-radius: 50%;}
 .m_center_des{padding-top:.1rem;margin-left:.15rem;width:50%;}
 .m_center_des h3{font-weight: 600;line-height: .58rem;}
 .m_center_des span{display: block;line-height:.3rem;color:#7A7E83;max-width: 3.2rem;font-size:.26rem;text-align: justify;}
-.m-subject-list{background: #fff; margin-top:.55rem;padding:0 .3rem;position:relative;}
+.m-subject-list{background: #fff; margin-top:.35rem;padding:0 .3rem;position:relative;}
 .m-pos-top{width:3.6rem;margin-left:-1.8rem;border:1px #e5e5e5 solid;border-radius: .3rem;}
 .m-pos-top span:first-of-type{margin-right: .1rem;}
 .m-sub-header i{color:#22a69f;margin-right:.15rem;font-size:.28rem;}
@@ -748,7 +748,7 @@ border-radius: 50%;}
 .m-sub-con-h span{position:absolute;right:.15rem;top:.25rem;font-size:.42rem;max-width:10%;}
 .m-sub-con-c p{line-height: .34rem;color:#7a7e83;text-align: justify;font-size:.28rem;}
 .m-sub-con-h h3{font-weight: bold;line-height:.4rem;font-size:.3rem;font-weight: 400;%;}
-.m_right_btn{width:25%;text-align: center;padding-top:.15rem;}
+.m_right_btn{width:25%;padding-top:.15rem;}
 .m_edit_items{color:#E01A48;}
 .g-card{line-height: .6rem;height:.6rem;color:#222c38;font-size:.26rem;display: block;}
 .g-card i{margin-right:.2rem;font-size:.32rem;}
