--- a/webroot/mobile/css/style.css
+++ b/webroot/mobile/css/style.css
@@ -92,8 +92,8 @@ outline:none;height:0.8rem;line-height: 0.78rem;}
 .a-banner{width:100%;height:3.8rem;position:relative;}
 .a-search-box{position:fixed;top:0.6rem;width:100%; padding:0 0.68rem;z-index:3;max-width:750px;}
 .a_search_box{position:fixed;right:.3rem;top:.8rem;z-index:9999;}
-.a_search_box a{display: block;height:32px;width:32px;border-radius: 50%;background: rgba(0,0,0,.8);display:-webkit-box;-webkit-box-align:center;-webkit-box-pack:center;  -webkit-box-orient: vertical; }
-.a_search_box i{color:#fff;font-size:17px;display: block;font-weight: 100;}
+.a_search_box a{display: block;height:32px;width:32px;border-radius: 50%;background: rgba(0,0,0,.8);display:-webkit-box;-webkit-box-align:center;-webkit-box-pack:center;  -webkit-box-orient: vertical; display:box;box-align:center;box-pack:center;  box-orient: vertical;}
+.a_search_box i{color:#fff;font-size:17px;height:20px;line-height: 20px; }
 .a-search{/*display: flex;align-items: center;*/background:rgba(255,255,255,.5); width:100%;border-radius: 4px;height:30px;line-height: 30px;}
 .a-search a{}
 .a-search i{color:#fff;font-size:16px;margin-left:0.2rem;float:left;}
