--- a/webroot/mobile/css/style.css
+++ b/webroot/mobile/css/style.css
@@ -91,7 +91,7 @@ outline:none;height:0.8rem;line-height: 0.78rem;}
 .inner .news-serch{ width:0.32rem;height:0.32rem;font-size:0.32rem;top:0.29rem;}
 .a-banner{width:100%;height:3.8rem;position:relative;}
 .a-search-box{position:fixed;top:0.6rem;width:100%; padding:0 0.68rem;z-index:3;max-width:750px;}
-.a_search_box{position:fixed;right:.3rem;top:.8rem;z-index:9999;}
+.a_search_box{position:fixed;right:.3rem;top:.8rem;z-index:9999;padding:2px;}
 .a_search_box a{display: block;height:32px;width:32px;border-radius: 50%;background: rgba(0,0,0,.8);display:-webkit-box;-webkit-box-align:center;-webkit-box-pack:center;  -webkit-box-orient: vertical; display:box;box-align:center;box-pack:center;  box-orient: vertical;}
 .a_search_box i{color:#fff;font-size:17px;height:20px;line-height: 20px; }
 .a-search{/*display: flex;align-items: center;*/background:rgba(255,255,255,.5); width:100%;border-radius: 4px;height:30px;line-height: 30px;}
@@ -131,7 +131,7 @@ outline:none;height:0.8rem;line-height: 0.78rem;}
 .newsbox .sec-news-l p{line-height:0.32rem;font-size:0.26rem;-webkit-line-clamp: 2;}
 .newsbox .sec-news-r{float:right;width:1.6rem;height:1.6rem;margin-top:0.14rem;overflow:hidden;}
 .newsbox .sec-news-r img{width:100%;display: block;min-height:1.6rem;}
-.news-bottom{margin-top:0.26rem;}
+.news-bottom{margin-top:0.15rem;}
 .news-bottom .sec-b-l{float:left; margin-top:0.07rem;}
 .news-bottom .sec-b-l div{display:inline-block;color:#969fa9;margin-right:0.5rem;font-size:.22rem;}
 .sec-like span,.sec-comment span{display: inline-block; margin-right:0.1rem;font-size:.22rem;vertical-align: middle;}
@@ -362,10 +362,10 @@ border-bottom:none;top:-1px;margin-top:-1px;margin-left:-1px;}
 .menulist a span{line-height: 0.48rem;display: block;font-size:0.28rem;color:#222c38;}
 .menulist a i{display: block; font-size:0.44rem;margin:0 auto;line-height: 0.5rem;margin-bottom:0.1rem;height:.5rem;}
 .dk{width:100%;}
-.dk ul{width:500%;overflow:hidden;font-size:0;background: #f6f7f8;}
+.dk ul{width:500%;overflow:hidden;font-size:0;background: #fff;}
 .dk li{display: inline-block;overflow:hidden;border-radius: 0.1rem;padding:0.2rem 0.1rem;}
 .dk a{width:4.23rem;height:2.44rem;overflow:hidden; display: block;position:relative;border-radius: 0.1rem;
--webkit-box-shadow: 0 .05rem .12rem rgba(34, 44, 56, 0.2);;box-shadow: 0 .05rem .12rem rgba(34, 44, 56, 0.2);;}
+-webkit-box-shadow: 1px 1px 4px rgba(34, 44, 56, 0.3);box-shadow: 1px 1px 4px rgba(34, 44, 56, 0.3);}
 .dk img{width:100%;height:auto;display: block;}
 .dk span{position:absolute;right:-5%;padding:0 0.2rem 0 0.1rem ;background: #E01A48;top:0.3rem;color:#fff;font-size:0.24rem;
 height:0.4rem;line-height: 0.4rem;border-radius: 0.2rem;}
@@ -394,6 +394,7 @@ background-size: 0.16rem 0.25rem;width:5%;height:100%;}
 .morebtn{display: block;background: url(img/right.png) no-repeat;background-size:cover;width:0.15rem;height:0.22rem;align-self: center;}
 /*新的关注 加上border-top*/
 .internet-v-info{/*margin-bottom:0.2rem;border-bottom:1px #e5e5e5 solid;border-top:1px #e5e5e5 solid;padding:0.2rem 0;*/background: #fff;color:#969fa9;padding-top:.25rem;}
+.internet-v-info:last-of-type .bd1:after{height:0;}
 .internet-v-info .head-img{width:1.21rem;height:1.21rem;display: block;border-radius: 50%;position:relative;margin-right:0.3rem;float:left;}
 .head-img img{width:100%;height:100%;border-radius: 50%;}
 .head-img i{position: absolute;right:0.12rem;bottom:0;width:0.29rem;height:0.3rem;background: url(img/v.png) no-repeat;background-size: contain;}
@@ -417,7 +418,7 @@ line-height: .34rem;height:.34rem;}
 .vipinfo .mark a{line-height: .26rem;font-size:.22rem;color:#9ba4ad;/*padding:0 0.1rem;margin-bottom:4px*/}
 .vipinfo .s_mark_h a {border: 1px #969fa9 solid;border-radius: 0.1rem;line-height: 20px;font-size: 12px;color: #969fa9;padding: 0 0.1rem;display: inline-block;margin-bottom: 4px;}
 .vipinfo .mark i{font-size:.26rem;margin-right: .05rem;line-height: .3rem;}
-.m_focus_r{position: absolute;right:0;bottom:.25rem;;width:20%;text-align: center;font-size:.22rem;
+.m_focus_r{position: absolute;right:0;bottom:.26rem;;width:20%;text-align: center;font-size:.22rem;
 -webkit-transition: color .2s ease-in;transition: color .2s ease-in;}
 .m_focus_r span{display: block;margin-top:.1rem;}
 .m_focus_r i{font-size:.32rem;line-height: .34rem;}
@@ -1175,7 +1176,7 @@ background:-webkit-linear-gradient(top,#54d76a 0%,#53d66a 50%,#53d569 100%);  ba
 .m-service-con p{margin-bottom:.6rem;}
 .m-service-con h3,.m-service-t{font-weight: bold;}
 .m-service-con{margin-top:.6rem;}
-.m_title_des{padding:.15rem .3rem;background: #fff;border-bottom:1px #e5e5e5 solid;}
+.m_title_des{padding:.15rem .3rem;background: #fff;}
 .m_title_des h3{border-left:#e01a48 solid 2px;padding-left:.12rem;line-height:.32rem;font-size: .3rem;height:.34rem;}
 .m_sub-title{line-height: .34rem;}
 /*audio*/
