--- a/webroot/mobile/css/style.css
+++ b/webroot/mobile/css/style.css
@@ -298,6 +298,7 @@ border-bottom:none;top:-1px;margin-top:-1px;margin-left:-1px;}
 /*活动流程图片*/
 .a_process_pic{padding-top:.2rem;}
 .a_process_pic img{max-width:100%; margin:.2rem auto;}
+.newscomment-box table{max-width: 6.9rem;}
 .wraper .a-detail{margin-top:0;border-bottom: none;padding-bottom:0.2rem;}
 .timenode{padding:.2rem .3rem;}
 .a-detail .datetime{text-align: center; width:90%;line-height: 0.28rem; background: #eeeeee;margin:0.26rem auto;font-size:0.28rem;color:#a3a3a3;margin-bottom:0;}
