--- a/webroot/mobile/css/style.css
+++ b/webroot/mobile/css/style.css
@@ -367,7 +367,7 @@ border-bottom:none;top:-1px;margin-top:-1px;margin-left:-1px;}
 .menulist a i{display: block; font-size:0.44rem;margin:0 auto;line-height: 0.5rem;margin-bottom:0.1rem;height:.5rem;color:#7a7e83;}
 .a_menusort a i{font-size:.46rem;}
 .a_menusort a:nth-of-type(2) i{font-size:.5rem;}
-.a_menusort a:nth-of-type(5) i{font-size:.48rem;}
+.a_menusort a:nth-of-type(6) i{font-size:.48rem;}
 .dk{width:100%;}
 .dk ul{width:500%;overflow:hidden;font-size:0;background: #fff;}
 .dk li{display: inline-block;overflow:hidden;border-radius: 0.1rem;padding:0.2rem 0.1rem;}
@@ -704,7 +704,8 @@ border-radius: 50%;}
 .h-home-menu{/*display:-webkit-box;display:-webkit-flex;display:flex;-webkit-flex-wrap: wrap;flex-wrap: wrap;*/background: #fff;border-bottom:1px #e5e5e5 solid;margin-bottom:0.2rem;overflow:hidden;/*向下兼容*/}
 .typeselect,.c-select{width:1rem;overflow: hidden;}
 .typeselect select,.c-select select{width:1.3rem;border:none;padding-left:0.5rem;}
-.c-select select{width:1.5rem;padding-left:0;font-size:.3rem;}
+.c-select select{width:1.5rem;padding-left:0;font-size:.28rem;}
+.c-select{margin-right:.1rem;}
 .h-home-menu li{width:50%; padding:0.4rem 0 0.4rem 1rem;border:1px #e5e5e5 solid;border-bottom:none;border-right:none;float:left;/*向下兼容*/height:1rem;}
 .topnav li{width:33.3%;padding:0.3rem 0.2rem;height:1.5rem;}
 .topnav li a{display:block;text-align: center;}
