--- a/webroot/mobile/css/style.css
+++ b/webroot/mobile/css/style.css
@@ -90,12 +90,13 @@ outline:none;height:0.8rem;line-height: 0.78rem;}
 /*news --start--*/
 .inner .news-serch{ width:0.32rem;height:0.32rem;font-size:0.32rem;top:0.29rem;}
 .a-banner{width:100%;height:3.8rem;position:relative;}
+.a_banner_title{position:absolute;bottom:0;height:32px;background: rgba(0,0,0,.6);color:#fff;width:100%;text-indent: .3rem;line-height: 30px;}
+.a_banner_title h3{font-size:14px;}
 .a-search-box{position:fixed;top:0.6rem;width:100%; padding:0 0.68rem;z-index:3;max-width:750px;}
 .a_search_box{position:fixed;right:.3rem;top:.8rem;z-index:9999;padding:2px;}
 .a_search_box a{display: block;height:32px;width:32px;border-radius: 50%;background: rgba(0,0,0,.5);text-align: center;}
 .a_search_box i{color:#fff;font-size:17px;line-height: 32px; }
 .a-search{/*display: flex;align-items: center;*/background:rgba(255,255,255,.5); width:100%;border-radius: 4px;height:30px;line-height: 30px;}
-.a-search a{}
 .a-search i{color:#fff;font-size:16px;margin-left:0.2rem;float:left;}
 .a-search .s-con{padding-right:0.2rem;float:left;width:85%;margin-left:0.1rem;}
 .a-search .s-con input{/*font-size:0.3rem;height:0.6rem;line-height:0.6rem;*/background: none;border:none;color:#fff;width:90%;line-height:30px;display:block;height:30px;font-size:14px;padding:0;}
@@ -103,9 +104,9 @@ outline:none;height:0.8rem;line-height: 0.78rem;}
 .pic-list-container li{width:7.5rem;float:left;/*height:2.95rem;*/}
 .pic-list-container li a{display: block;width:100%;height:3.8rem;overflow:hidden;}
 .pic-list-container li img{width:100%;height:3.8rem;display: block;}
-.a-banner .yd{position:absolute;bottom:0.1rem;width:100%;height:0.2rem; justify-content: center;display:-webkit-flex;display:-moz-flex;display:-ms-flex;display: flex;
--webkit-justify-content: center;-moz-justify-content:center;-ms-justify-content:center;}
-.a-banner .yd span{width:.1rem;height:.1rem;border-radius: 50%;background: #929292;display: inline-block;margin:0 0.05rem;}
+.a-banner .yd{position:absolute;bottom:0;width:100%;height:30px;display:-webkit-flex;display: flex;
+-webkit-justify-content:  center; justify-content: center;padding-right:20px;}
+.a-banner .yd span{width:6px;height:6px;border-radius: 50%;background: #929292;display: inline-block;margin:12px 3px;}
 .a-banner .yd span.cur{background: #fff;}
 .news-list-items{border-bottom:1px #e5e5e5 solid;padding:0.16rem 0.3rem;background: #fff;overflow:hidden;/*position:relative;*/}
 #activity .news-list-items{border-bottom:none;padding:.2rem .3rem;}
@@ -355,19 +356,14 @@ border-bottom:none;top:-1px;margin-top:-1px;margin-left:-1px;}
 .m-banner{background: url(img/m-banner.png) no-repeat center center;background-size:cover;width:100%;height:2.96rem;}
 /*约见 --start*/
 .menusort{width:100%;background: #fff;margin:0 0 0.2rem;}
-.allmenu{width:100%;overflow:hidden;/*overflow-x:scroll;-webkit-overflow-scrolling: touch;*/}
+.allmenu{width:100%;overflow:hidden;}
 .allmenu::-webkit-scrollbar,.dk ul::-webkit-scrollbar,.outerbox::-webkit-scrollbar{display: none;}
-
 .sele-r{float:right;background: url(img/right.png) no-repeat;width:0.16rem;height:0.25rem;background-size: cover;}
 .menulist a{width:25%;text-align: center;font-size:0.28rem;float:left;overflow:hidden;padding:.2rem 0;color:#606060;}
-.a_menusort .menulist a{width:16.5%;}
-.a_menusort .allmenu{padding:0 .3rem;}
-/*.menulist a:first-of-type{border-left: none;}*/
 .menulist a span{line-height: 0.48rem;display: block;font-size:0.28rem;color:#222c38;}
-.menulist a i{display: block; font-size:0.44rem;margin:0 auto;line-height: 0.5rem;margin-bottom:0.1rem;height:.5rem;color:#7a7e83;}
-.a_menusort a i{font-size:.44rem;}
-.a_menusort a:nth-of-type(2) i{font-size:.5rem;}
-.a_menusort a:nth-of-type(6) i{font-size:.48rem;}
+.menulist a i{display: block; font-size:0.44rem;margin:0 auto;height:.5rem;line-height: .5rem;color:#7a7e83;
+}
+.a_menusort a i{font-size:.76rem;height:.76rem;line-height: .76rem;}
 .dk{width:100%;}
 .dk ul{width:500%;overflow:hidden;font-size:0;background: #fff;}
 .dk li{display: inline-block;overflow:hidden;border-radius: 0.1rem;padding:0.2rem 0.1rem;}
