--- a/webroot/mobile/css/style.css
+++ b/webroot/mobile/css/style.css
@@ -163,7 +163,7 @@ outline:none;height:0.8rem;line-height: 0.78rem;}
 .con-bottom span:nth-of-type(2){max-width:15%;text-align: center;}
 .con-bottom .readnums{width:80%;text-align: right;}
 .a-con-bottom .readnums{width:70%;}
-.con-bottom .a-coll{width:0.6rem;}
+.con-bottom .a-coll{width:0.7rem;text-align: center;}
 .a-coll i{font-size:0.34rem;}
 .readnums i{font-size:.24rem;vertical-align: top;margin-right:.05rem;}
 .con-bottom i{margin:0 0.1rem; color:#9ba4ad;vertical-align: -.03rem;font-size:0.32rem;}
@@ -736,8 +736,9 @@ border-radius: 50%;}
 .m_left-pic{width:1.34rem;height:1.34rem;border-radius: 50%;overflow:hidden;}
 .m_left-pic img{width:100%;height:1.34rem;display: block;}
 .m_center_des{padding-top:.1rem;margin-left:.15rem;width:50%;}
+.wraper .w75{width:75%;}
 .m_center_des h3{font-weight: 600;line-height: .58rem;}
-.m_center_des span{display: block;line-height:.3rem;color:#7A7E83;max-width: 3.2rem;font-size:.26rem;text-align: justify;}
+.m_center_des span{display: block;line-height:.3rem;color:#7A7E83;font-size:.26rem;text-align: justify;}
 .m-subject-list{background: #fff; margin-top:.35rem;padding:0 .3rem;position:relative;}
 .m-pos-top{width:3.6rem;margin-left:-1.8rem;border:1px #e5e5e5 solid;border-radius: .3rem;}
 .m-pos-top span:first-of-type{margin-right: .1rem;}
